--- a/petljadoc/bootstrap_petlja_theme/layout.html
+++ b/petljadoc/bootstrap_petlja_theme/layout.html
@@ -48,7 +48,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://petlja.org/">Petlja</a>
+      <a class="navbar-brand" href="http://petlja.org/">Your Logo </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -123,7 +123,7 @@
         <div class="text-center">
             <hr>
             <p class="text-muted">
-                <span class="pull-left">&copy; 2017 Petlja (Created using <a href="http://runestoneinteractive.org/">Runestone</a>)</span>
+                <span class="pull-left">&copy; 2019 Petlja (Created using <a href="http://runestoneinteractive.org/">RunestoneComponents</a> and <a href="https://pypi.org/project/Sphinx/">Swinx</a>)</span>
             </p>
         </div>
     </div>
