--- a/petljadoc/bootstrap_petlja_theme/layout.html
+++ b/petljadoc/bootstrap_petlja_theme/layout.html
@@ -48,7 +48,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <img src="_static/img/logo.png" style="width:80px; height: 80px;"> 
+     <img src="/_static/img/logo.png" style="width:80px; height: 80px;"> 
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-top: 10px; margin-left: 25px;">
