--- a/petljadoc/bootstrap_petlja_theme/layout.html
+++ b/petljadoc/bootstrap_petlja_theme/layout.html
@@ -20,7 +20,6 @@
 
 {% set css_files = css_files + [
     '_static'+'/user-highlights.css',
-    '_static'+'/ubuntu.css',
     'https://use.fontawesome.com/releases/v5.1.1/css/all.css',
     '_static'+'/bootstrap-4.0.0-dist/css/bootstrap.min.css',
     '_static'+'/flatly.min.css',
@@ -48,7 +47,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <img src="/_static/img/logo.png" style="width:80px; height: 80px;"> 
+     <img src="{{pathto('_static/img/logo.png', 1)}}" style="width:80px; height: 80px;"> 
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-top: 10px; margin-left: 25px;">
@@ -80,18 +79,12 @@
   eBookConfig.python3 = {{ python3 }};
   eBookConfig.basecourse = '{{ basecourse }}';
   eBookConfig.runestone_version = '{{ runestone_version }}';
+  eBookConfig.imagesDir = '{{ pathto("_images/",1) }}';
+  if(typeof(Sk) != "undefined")
+      Sk.imgPath = eBookConfig.imagesDir;
 </script>
 
 <div id="fb-root"></div>
-<script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&status=0";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
 
 
 {% endblock %}
