--- a/petljadoc/bootstrap_petlja_theme/layout.html
+++ b/petljadoc/bootstrap_petlja_theme/layout.html
@@ -103,7 +103,7 @@
 
 <div class="container col-md-12" id="continue-reading"></div>
 
-<div class="container col-md-8 col-md-offset-2" id="main-content">
+<div class="container col-md-8 col-md-offset-2" id="main-content" style="margin-top: 70px;">
   {% block body %}{% endblock %}
   {% block nextprevious %}
       {% include "subchapter.html" %}
