--- a/petljadoc/bootstrap_petlja_theme/course_theme/layout.html
+++ b/petljadoc/bootstrap_petlja_theme/course_theme/layout.html
@@ -38,6 +38,8 @@
 
 <nav id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
 
+  <a href="https://petlja.org"><img src="{{pathto('_static/img/petlja-logo-wt.svg', 1)}}" style="width:80px; float: left;"> </a>
+  <a href="https://petlja.org/net.kabinet"><img src="{{pathto('_static/img/netkabinet-logo-strelica-wt.svg', 1)}}" style="width: 30px; margin-left: 15px; float: left;"> </a>
   <div class="container">
 
     <div class="navbar-header">
@@ -47,10 +49,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <img src="{{pathto('_static/img/logo.png', 1)}}" style="width:80px; height: 80px;"> 
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-top: 10px; margin-left: 25px;">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-left: 25px; text-align: center;">
       <ul class="nav navbar-nav">
         <li class="active"><a href="{{pathto('', 1)}}">{% if theme_navbar_title -%}{{ theme_navbar_title|e }}{%- else -%}{{ project|e }}{%- endif -%}</a></li>
       </ul>
@@ -100,13 +101,16 @@
 
 {%- block content %}
 {{ navBar() }}
-<div style="margin-left: 50%;margin-top: 5%;font-size: 20px;">
+<div style="margin-top: 65px;font-size: 20px; width: 20%; float: left; height: calc(100vh - 115px);">
   {{ sidebar()}}
   </div>
 <div class="container col-md-12" id="continue-reading"></div>
 
-<div class="container col-md-10 col-md-offset-2" id="main-content" style="margin-top: 70px;">
+<div class="container" id="main-content" style="float: left;  padding-left: 20px; height: calc(100vh - 115px);">
   {% block body %}{% endblock %}
+  
+</div>
+<div style="position: relative;">
   {% block nextprevious %}
       {% include "subchapter.html" %}
   {% endblock %}
@@ -114,16 +118,6 @@
 {%- endblock %}
 
 {%- block footer %}
-<footer class="footer col-md-12">
-    <div class="container">
-        <div class="text-center">
-            <hr>
-            <p class="text-muted">
-                <span class="pull-left">&copy; 2019 Petlja (Created using  <a href="https://pypi.org/project/Sphinx/">Swinx</a>, <a href="http://runestoneinteractive.org/">RunestoneComponents</a> and <a href="https://github.com/Petlja/PetljaDoc">PetljaDoc</a>)</span>
-            </p>
-        </div>
-    </div>
-</footer>
 
 
 {% if appname == "runestone" %}
