--- a/petljadoc/bootstrap_petlja_theme/course_theme/layout.html
+++ b/petljadoc/bootstrap_petlja_theme/course_theme/layout.html
@@ -65,7 +65,7 @@
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 <link rel="shortcut icon" href="{{pathto('_static/favicon.ico', 1)}}" type="image/ico" />
-
+<script type="text/javascript" src="/_static/petja.js"></script>
 <script type="text/javascript">
   eBookConfig = {};
   eBookConfig.host = '{{course_url}}' ? '{{course_url}}' : 'http://127.0.0.1:8000';
@@ -103,6 +103,7 @@
 {{ navBar() }}
 <div style="margin-top: 65px;font-size: 20px; width: 20%; float: left; height: calc(100vh - 115px);">
   {{ sidebar()}}
+ 
   </div>
 <div class="container col-md-12" id="continue-reading"></div>
 
@@ -135,3 +136,5 @@
 {% endif %}
 
 {% endblock %}
+
+
