--- a/petljadoc/bootstrap_petlja_theme/course_theme/subchapter.html
+++ b/petljadoc/bootstrap_petlja_theme/course_theme/subchapter.html
@@ -4,12 +4,12 @@
     </div>
 <ul class="pager">
     {%- if prev %}
-    <a href="{{ prev.link|e }}"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
+    <a href="{{ prev.link|e }}" id="prevLectureLink"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
     {%else%}
-    <a href="#" class="invisible"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
+    <a href="#" class="invisible" id="prevLectureLink"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
     {% endif %}
     {%- if next %}
-       <a href="{{ next.link|e }}"><div id="nextLecture" class="lecture-toggler-arrows lecture-toggler-arrows-next"> <i class="fas fa-arrow-right fa"></i></div></a>
+       <a href="#" id="nextLectureLink"><div id="nextLecture" class="lecture-toggler-arrows lecture-toggler-arrows-next"> <i class="fas fa-arrow-right fa"></i></div></a>
     {%- endif %}
 </ul>
 
