--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -38,12 +38,15 @@
 
 <nav id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
 
-  <a href="https://petlja.org"><img src="{{pathto('_static/img/petlja-logo-wt.svg', 1)}}" style="width:80px; float: left;"> </a>
-  <a href="https://petlja.org/net.kabinet"><img src="{{pathto('_static/img/netkabinet-logo-strelica-wt.svg', 1)}}" style="width: 30px; margin-left: 15px; float: left;"> </a>
+  <a href="https://petlja.org"><img src="{{pathto('_static/img/petlja-logo-wt.svg', 1)}}"
+      style="width:80px; float: left;"> </a>
+  <a href="https://petlja.org/net.kabinet"><img src="{{pathto('_static/img/netkabinet-logo-strelica-wt.svg', 1)}}"
+      style="width: 30px; margin-left: 15px; float: left;"> </a>
   <div class="container">
 
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+        data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -51,9 +54,12 @@
       </button>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-left: 25px; text-align: center;">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
+      style="margin-left: 25px; text-align: center;">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="{{pathto('', 1)}}">{% if theme_navbar_title -%}{{ theme_navbar_title|e }}{%- else -%}{{ project|e }}{%- endif -%}</a></li>
+        <li class="active"><a
+            href="{{pathto('', 1)}}">{% if theme_navbar_title -%}{{ theme_navbar_title|e }}{%- else -%}{{ project|e }}{%- endif -%}</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -69,11 +75,11 @@
 <script type="text/javascript">
   eBookConfig = {};
   eBookConfig.host = '{{course_url}}' ? '{{course_url}}' : 'http://127.0.0.1:8000';
-  eBookConfig.app = eBookConfig.host+'/{{appname}}';
-  eBookConfig.ajaxURL = eBookConfig.app+'/ajax/';
+  eBookConfig.app = eBookConfig.host + '/{{appname}}';
+  eBookConfig.ajaxURL = eBookConfig.app + '/ajax/';
   eBookConfig.course = '{{course_id}}';
-  eBookConfig.logLevel = {{loglevel}};
-  eBookConfig.loginRequired = {{login_required}};
+  eBookConfig.logLevel = {{ loglevel }};
+  eBookConfig.loginRequired = {{ login_required }};
   eBookConfig.build_info = "{{build_info}}";
   eBookConfig.isLoggedIn = false;
   eBookConfig.useRunestoneServices = {{ use_services }};
@@ -82,8 +88,8 @@
   eBookConfig.runestone_version = '{{ runestone_version }}';
   eBookConfig.imagesDir = '{{ pathto("_images/",1) }}';
   eBookConfig.staticDir = '{{ pathto("_static/",1) }}';
-  if(typeof(Sk) != "undefined")
-      Sk.imgPath = eBookConfig.imagesDir;
+  if (typeof (Sk) != "undefined")
+    Sk.imgPath = eBookConfig.imagesDir;
 </script>
 
 <div id="fb-root"></div>
@@ -103,19 +109,59 @@
 {{ navBar() }}
 <div style="margin-top: 65px;font-size: 20px; width: 20%; float: left; height: calc(100vh - 115px);">
   {{ sidebar()}}
- 
-  </div>
-<div class="container col-md-12" id="continue-reading"></div>
 
-<div class="container" id="main-content" style="float: left;  padding-left: 20px; height: calc(100vh - 115px);">
-  {% block body %}{% endblock %}
-  
 </div>
+
+<div class="container col-md-12" id="continue-reading"></div>
+<div class="container" id="main-content" style="float: left;  padding-left: 20px; height: calc(100vh - 115px);">
+{% if pagename == 'index' %}
+<div class="course-index">
+<div class="course-title-index">
+  <h2> {{ course.title }}</h2>
+</div>
+<div class="long-desc">
+  {{ course.longDesc}}
+</div>
+<div>
+  <div class="label-course">
+    {{_('You will learn:')}}
+  </div>
+  {% for el in course.willlearn %}
+  <p class="p-course"> {{el}}</p>
+  {% endfor %}
+</div>
+<div>
+  <div class="label-course">
+    {{_('Required:')}}
+  </div>
+  {% for el in course.requirements %}
+  <p class="p-course"> {{el}}</p>
+  {% endfor %}
+</div>
+<div>
+  <div class="label-course">
+    {{_('Table of content:')}}
+  </div>
+  {% for el in course.toc %}
+  <p class="p-course">{{el}}</p>
+  {% endfor %}
+</div>
+
+</div>
+</div>
+
+{% else %}
+
+  {% block body %}{% endblock %}
+
+</div>
+{% endif %}
 <div style="position: relative;">
   {% block nextprevious %}
-      {% include "subchapter.html" %}
+  {% include "subchapter.html" %}
   {% endblock %}
 </div>
+
 {%- endblock %}
 
 {%- block footer %}
@@ -127,7 +173,7 @@
   _gaq.push(['_setAccount', 'UA-32029811-1']);
   _gaq.push(['_trackPageview']);
 
-  (function() {
+  (function () {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
@@ -136,5 +182,3 @@
 {% endif %}
 
 {% endblock %}
-
-
