refresh scroll fix

--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -193,7 +193,7 @@
 
 </div>
 {% endif %}
-<div style="position: relative;">
+<div style="position: fixed; bottom: 0px; width: 100%;">
   {% block nextprevious %}
   {% include "subchapter.html" %}
   {% endblock %}
