css rename, publish 0.2.10

--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -39,7 +39,7 @@
     'https://use.fontawesome.com/releases/v5.1.1/css/all.css',
     '_static'+'/bootstrap-4.0.0-dist/css/bootstrap.min.css',
     '_static'+'/flatly.min.css',
-    '_static'+'/petlja.css'
+    '_static'+'/petlja-course.css'
   ]
 %}
 
@@ -193,7 +193,7 @@
 
 </div>
 {% endif %}
-<div style="position: fixed; bottom: 0px; width: 100%;">
+<div style="position: fixed; bottom: 0px; width: 100%;z-index: 100000;">
   {% block nextprevious %}
   {% include "subchapter.html" %}
   {% endblock %}
