--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -38,7 +38,7 @@
     'https://use.fontawesome.com/releases/v5.1.1/css/all.css',
     '_static'+'/bootstrap-4.0.0-dist/css/bootstrap.min.css',
     '_static'+'/flatly.min.css',
-    '_static'+'/petlja.css'
+    '_static'+'/petlja-runestone.css'
   ]
 %}
 
