new skulpt in petljadoc

--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -30,7 +30,9 @@
     '_static'+'/jquery.hotkey.js',
     '_static'+'/jquery-migrate-1.2.1.min.js',
     '_static'+'/course-errors.js',
-    '_static'+'/petlja.js'
+    '_static'+'/petlja.js',
+    '_static'+'/skulpt-stdlib.js',
+    '_statis'+'/skulpt.min.js'
   ]
 %}
 
