--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -29,7 +29,9 @@
     '_static'+'/jquery.idle-timer.js',
     '_static'+'/processing-1.4.1.min.js',
     '_static'+'/jquery.hotkey.js',
-    '_static'+'/jquery-migrate-1.2.1.min.js'
+    '_static'+'/jquery-migrate-1.2.1.min.js',
+    '_static'+'/skulpt-stdlib.js',
+    '_statis'+'/skulpt.min.js'
   ]
 %}
 
