--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -32,7 +32,7 @@
     '_static'+'/course-errors.js',
     '_static'+'/petlja.js',
     '_static'+'/skulpt-stdlib.js',
-    '_statis'+'/skulpt.min.js'
+    '_static'+'/skulpt.min.js'
   ]
 %}
 
@@ -41,7 +41,8 @@
     'https://use.fontawesome.com/releases/v5.1.1/css/all.css',
     '_static'+'/bootstrap-4.0.0-dist/css/bootstrap.min.css',
     '_static'+'/flatly.min.css',
-    '_static'+'/petlja-course.css'
+    '_static'+'/petlja-course.css',
+    '_static'+'/nbstyle.css'
   ]
 %}
 
