--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -31,7 +31,7 @@
     '_static'+'/jquery.hotkey.js',
     '_static'+'/jquery-migrate-1.2.1.min.js',
     '_static'+'/skulpt-stdlib.js',
-    '_statis'+'/skulpt.min.js'
+    '_static'+'/skulpt.min.js'
   ]
 %}
 
@@ -40,7 +40,8 @@
     'https://use.fontawesome.com/releases/v5.1.1/css/all.css',
     '_static'+'/bootstrap-4.0.0-dist/css/bootstrap.min.css',
     '_static'+'/flatly.min.css',
-    '_static'+'/petlja-runestone.css'
+    '_static'+'/petlja-runestone.css',
+    '_static'+'nbstyle.css'
   ]
 %}
 
