require.js added and hide cell support

--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -32,7 +32,8 @@
     '_static'+'/course-errors.js',
     '_static'+'/petlja.js',
     '_static'+'/skulpt-stdlib.js',
-    '_static'+'/skulpt.min.js'
+    '_static'+'/skulpt.min.js',
+    '_static'+ '/require.js'
   ]
 %}
 
