--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -31,7 +31,8 @@
     '_static'+'/jquery.hotkey.js',
     '_static'+'/jquery-migrate-1.2.1.min.js',
     '_static'+'/skulpt-stdlib.js',
-    '_static'+'/skulpt.min.js'
+    '_static'+'/skulpt.min.js',
+    '_static'+ '/require.js'
   ]
 %}
 
