layout typo fix

--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -2,7 +2,7 @@
 
 {% set script_files = ['_static/runestonebase.js'] + script_files + [
     '_static'+'/skulpt-stdlib.js',
-    '_static'+'/skulpt.min.js'
+    '_static'+'/skulpt.min.js',
     '_static'+ '/mchoice-i18n.sr-Cyrl.js',
     '_static'+ '/mchoice-i18n.sr.js',
     '_static'+ '/mchoice-i18n.sr-Latn.js',
