order of js files

--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -1,8 +1,6 @@
 {% extends "basic_layout.html" %}
 
-{% set script_files = ['_static/runestonebase.js'] + script_files + [
-    '_static'+'/skulpt-stdlib.js',
-    '_static'+'/skulpt.min.js',
+{% set script_files = ['_static/runestonebase.js', '_static'+'/skulpt-stdlib.js','_static'+'/skulpt.min.js'] + script_files + [
     '_static'+ '/mchoice-i18n.sr-Cyrl.js',
     '_static'+ '/mchoice-i18n.sr.js',
     '_static'+ '/mchoice-i18n.sr-Latn.js',
