--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -1,5 +1,6 @@
 {% extends "basic_layout.html" %}
-{% set script_files = ['_static/runestonebase.js', '_static'+'/skulpt-stdlib.js','_static'+'/skulpt.min.js'] + script_files + [
+
+{% set script_files = ['_static/runestonebase.js', '_static'+'/skulpt.min.js', '_static'+'/skulpt-stdlib.js'] + script_files + [
     '_static'+ '/mchoice-i18n.sr-Cyrl.js',
     '_static'+ '/mchoice-i18n.sr.js',
     '_static'+ '/mchoice-i18n.sr-Latn.js',
