--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -32,7 +32,6 @@
     '_static'+'/jquery-migrate-1.2.1.min.js',
     '_static'+'/course-errors.js',
     '_static'+'/petlja.js',
-    '_static'+ '/require.js'
   ]
 %}
 
@@ -104,7 +103,7 @@
   eBookConfig.build_info = "{{build_info}}";
   eBookConfig.isLoggedIn = false;
   eBookConfig.useRunestoneServices = '{{ use_services }}';
-  eBookConfig.python3 = '{{ python3 }}';
+  eBookConfig.python3 = true;
   eBookConfig.basecourse = '{{ basecourse }}';
   eBookConfig.runestone_version = '{{ runestone_version }}';
   eBookConfig.imagesDir = '{{ pathto("_images/",1) }}';
