--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -96,7 +96,7 @@
   eBookConfig.build_info = "{{build_info}}";
   eBookConfig.isLoggedIn = false;
   eBookConfig.useRunestoneServices = '{{ use_services }}';
-  eBookConfig.python3 = '{{ python3 }}';
+  eBookConfig.python3 = true;
   eBookConfig.basecourse = '{{ basecourse }}';
   eBookConfig.runestone_version = '{{ runestone_version }}';
   eBookConfig.imagesDir = '{{ pathto("_images/",1) }}';
