--- a/petljadoc/themes/course_theme/layout.html
+++ b/petljadoc/themes/course_theme/layout.html
@@ -32,6 +32,7 @@
     '_static'+'/jquery-migrate-1.2.1.min.js',
     '_static'+'/course-errors.js',
     '_static'+'/petlja.js',
+    '_static'+ '/require.js'
   ]
 %}
 
