--- a/petljadoc/themes/course_theme/basic_layout.html
+++ b/petljadoc/themes/course_theme/basic_layout.html
@@ -7,24 +7,14 @@
     :copyright: Copyright 2007-2020 by the Sphinx team, see AUTHORS.
     :license: BSD, see LICENSE for details.
 #}
-{%- block doctype -%}{%- if html5_doctype %}
-<!DOCTYPE html>
-{%- else %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-{%- endif %}{%- endblock %}
 {%- set reldelim1 = reldelim1 is not defined and ' &#187;' or reldelim1 %}
 {%- set reldelim2 = reldelim2 is not defined and ' |' or reldelim2 %}
-{%- set render_sidebar = (not embedded) and (not theme_nosidebar|tobool) and
-                         (sidebars != []) %}
+{%- set render_sidebar = (not embedded) and (not theme_nosidebar|tobool) and (sidebars != []) %}
 {%- set url_root = pathto('', 1) %}
-{# XXX necessary? #}
-{%- if url_root == '#' %}{% set url_root = '' %}{% endif %}
-{%- if not embedded and docstitle %}
-  {%- set titlesuffix = " &#8212; "|safe + docstitle|e %}
-{%- else %}
-  {%- set titlesuffix = "" %}
-{%- endif %}
+
+{%- if url_root == '#' %}
+  {% set url_root = '' %}
+{% endif %}
 
 {%- macro relbar() %}
     <div class="related" role="navigation" aria-label="related navigation">
@@ -32,9 +22,11 @@
       <ul>
         {%- for rellink in rellinks %}
         <li class="right" {% if loop.first %}style="margin-right: 10px"{% endif %}>
-          <a href="{{ pathto(rellink[0])|e }}" title="{{ rellink[1]|striptags|e }}"
-             {{ accesskey(rellink[2]) }}>{{ rellink[3] }}</a>
-          {%- if not loop.first %}{{ reldelim2 }}{% endif %}</li>
+          <a href="{{ pathto(rellink[0])|e }}" title="{{ rellink[1]|striptags|e }}" {{ accesskey(rellink[2]) }}>{{ rellink[3] }}</a>
+          {%- if not loop.first %}
+            {{ reldelim2 }}
+          {% endif %}
+        </li>
         {%- endfor %}
         {%- block rootrellink %}
         <li class="nav-item nav-item-0"><a href="{{ pathto(master_doc)|e }}">{{ shorttitle|e }}</a>{{ reldelim1 }}</li>
@@ -43,7 +35,8 @@
           <li class="nav-item nav-item-{{ loop.index }}"><a href="{{ parent.link|e }}" {% if loop.last %}{{ accesskey("U") }}{% endif %}>{{ parent.title }}</a>{{ reldelim1 }}</li>
         {%- endfor %}
         <li class="nav-item nav-item-this"><a href="{{ link|e }}">{{ title }}</a></li>
-        {%- block relbaritems %} {% endblock %}
+        {%- block relbaritems %} 
+        {% endblock %}
       </ul>
     </div>
 {%- endmacro %}
@@ -52,17 +45,11 @@
       {%- if render_sidebar %}
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
-          {%- block sidebarlogo %}
-          {%- if logo %}
-            <p class="logo"><a href="{{ pathto(master_doc)|e }}">
-              <img class="logo" src="{{ pathto('_static/' + logo, 1)|e }}" alt="Logo"/>
-            </a></p>
-          {%- endif %}
-          {%- endblock %}
+          
           {%- if sidebars != None %}
             {#- new style sidebar: explicitly include/exclude templates #}
             {%- for sidebartemplate in sidebars %}
-            {%- include sidebartemplate %}
+              {%- include sidebartemplate %}
             {%- endfor %}
           {%- else %}
             {#- old style sidebars: using blocks -- should be deprecated #}
@@ -95,23 +82,28 @@
 {%- endmacro %}
 
 {%- macro css() %}
-    <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}" type="text/css" />
-    <link rel="stylesheet" href="{{ pathto('_static/' + style, 1)|e }}" type="text/css" />
     {%- for css in css_files %}
-      {%- if css|attr("filename") %}
+    {%- if css|attr("filename") %}
     {{ css_tag(css) }}
-      {%- else %}
+    {%- else %}
     <link rel="stylesheet" href="{{ pathto(css, 1)|e }}" type="text/css" />
-      {%- endif %}
-    {%- endfor %}
-{%- endmacro %}
+    {%- endif -%}
+    {%- endfor -%}
+{%- endmacro -%}
+
+{%- block doctype -%}
+    {%- if html5_doctype -%}
+      <!DOCTYPE html>
+    {%- else -%}
+      <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+    {%- endif -%}
+{%- endblock -%}
 
 {%- if html_tag %}
-{{ html_tag }}
+  {{ html_tag }}
 {%- else %}
-{%- block lang %}
-
-{%- endblock %}
+  {%- block lang %}
+  {%- endblock %}
 {%- endif %}
   <head>
     {%- if not html5_doctype and not skip_ua_compatible %}
@@ -125,50 +117,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {{- metatags }}
     {%- block htmltitle %}
-    <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
+    <title>{{ title|striptags|e }}</title>
     {%- endblock %}
-    {%- block css %}
-    {{- css() }}
-    {%- endblock %}
+    {%- block css -%}
+    {{ css() }}
+    {%- endblock -%}
     {%- if not embedded %}
-    {%- block scripts %}
-    {{- script() }}
-    {%- endblock %}
-    {%- if pageurl %}
-    <link rel="canonical" href="{{ pageurl|e }}" />
+      {%- block scripts -%}
+        {{ script() }}
+      {%- endblock %}
+      {%- if pageurl %}
+        <link rel="canonical" href="{{ pageurl|e }}" />
+      {%- endif %}
+      {%- if use_opensearch %}
+      <link rel="search" type="application/opensearchdescription+xml"
+            title="{% trans docstitle=docstitle|e %}Search within {{ docstitle }}{% endtrans %}"
+            href="{{ pathto('_static/opensearch.xml', 1) }}"/>
+      {%- endif %}
     {%- endif %}
-    {%- if use_opensearch %}
-    <link rel="search" type="application/opensearchdescription+xml"
-          title="{% trans docstitle=docstitle|e %}Search within {{ docstitle }}{% endtrans %}"
-          href="{{ pathto('_static/opensearch.xml', 1) }}"/>
-    {%- endif %}
-    {%- if favicon %}
-    <link rel="shortcut icon" href="{{ pathto('_static/' + favicon, 1)|e }}"/>
-    {%- endif %}
-    {%- endif %}
-{%- block linktags %}
-    {%- if hasdoc('about') %}
-    <link rel="author" title="{{ _('About these documents') }}" href="{{ pathto('about') }}" />
-    {%- endif %}
-    {%- if hasdoc('genindex') %}
-    <link rel="index" title="{{ _('Index') }}" href="{{ pathto('genindex') }}" />
-    {%- endif %}
-    {%- if hasdoc('search') %}
-    <link rel="search" title="{{ _('Search') }}" href="{{ pathto('search') }}" />
-    {%- endif %}
-    {%- if hasdoc('copyright') %}
-    <link rel="copyright" title="{{ _('Copyright') }}" href="{{ pathto('copyright') }}" />
-    {%- endif %}
-    {%- if next %}
-    <link rel="next" title="{{ next.title|striptags|e }}" href="{{ next.link|e }}" />
-    {%- endif %}
-    {%- if prev %}
-    <link rel="prev" title="{{ prev.title|striptags|e }}" href="{{ prev.link|e }}" />
-    {%- endif %}
-{%- endblock %}
-{%- block extrahead %} {% endblock %}
+{%- block extrahead %} 
+{% endblock %}
   </head>
-  {%- block body_tag %}<body>{% endblock %}
+{% block body_tag %}
+  <body>
+{% endblock %}
 {%- block header %}{% endblock %}
 
 {%- block relbar1 %}{{ relbar() }}{% endblock %}
