--- a/petljadoc/themes/course_theme/globaltoc.html
+++ b/petljadoc/themes/course_theme/globaltoc.html
@@ -1,18 +1,23 @@
 
-            <div>{% for lesson in course.active_lessons %}
-                <div class="lecture-div" id=lecture-{{lesson.folder_url}}>
-                    <i class="fas fa-caret-right caret-position"></i>
-                    <i class="fas fa-caret-down caret-position d-none"></i>
+           <div class="tableOfContent">
+            <h5> {{ _('Table of content:') }} </h5>
+                <div id="courseContentToggle"><i class="far fa-arrow-alt-circle-left courseContentToggle"></i></div>
+            </div>
+           <div>{% for lesson in course.active_lessons %}
+                <div class="courseContentsSection">
+                <div class="lecture-div courseContentsSectionHeadline" id=lecture-{{lesson.folder_url}}>
                     <h5>{{lesson.title}}</h5>
+                    <i class="fas fa-angle-down caret-position "> </i>
+                    <i class="fas fa-angle-up caret-position d-none"></i>
                 </div>
-                <div class="d-none">
+                <div class="courseContentsSubSection d-none">
                     {%- for activity in lesson.active_activies -%}
                     {%- if pagename == 'index' -%}
                         <a href=./{{lesson.folder_url}}/{{activity.toc_url}}.html>
                     {%- else -%}
                         <a href=../{{lesson.folder_url}}/{{activity.toc_url}}.html>
                     {%- endif -%}
-                    <div class="activity-div" id=activity-{{activity.toc_url}}>
+                    <div class="studioLecture" id=activity-{{activity.toc_url}}>
                         {%- if "reading" == activity.activity_type -%}
                         <i class="fas fa-file-alt activity-icon"></i>
                         {%- elif "video" == activity.activity_type -%}
@@ -23,5 +28,6 @@
                         {{activity.title}}</div></a>
                 {% endfor -%}
                 </div>
+            </div>
                 {% endfor -%}
             </div>
