--- a/petljadoc/themes/course_theme/subchapter.html
+++ b/petljadoc/themes/course_theme/subchapter.html
@@ -1,21 +1,32 @@
-<div class="col-md-12 lecture-switcher">
-    <div class="petljadoc-resources">
-            <span class="pull-left">&copy; 2019 Petlja (Created using  <a href="https://pypi.org/project/Sphinx/">Swinx</a>, <a href="http://runestoneinteractive.org/">RunestoneComponents</a> and <a href="https://github.com/Petlja/PetljaDoc">PetljaDoc</a>)</span>
-    </div>
-<ul class="pager">
-    {%- if prev %}
-    <a href="{{ prev.link|e }}" id="prevLectureLink"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
-    {%else%}
-    <a href="#" class="invisible" id="prevLectureLink"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
-    {% endif %}
-    {%- if next %}
-       <a href="#" id="nextLectureLink"><div id="nextLecture" class="lecture-toggler-arrows lecture-toggler-arrows-next"> <i class="fas fa-arrow-right fa"></i></div></a>
-    {%- endif %}
-</ul>
-
+<div>
+<div class="lecture-prev-next-toggle">
+  {%- if prev %}
+  <a  href="{{ prev.link|e }}" id="prevLectureLink" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i> <span> {{ _('Previous chapter') }} </span> </a>
+  {%else%}
+  <a  href="#" id="prevLectureLink" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i> <span>{{ _('Previous chapter') }}</span> </a>
+  {% endif %}
+  {%- if next %}
+  <a id="nextLectureLink" class="lecture-toggler-arrows"><span> {{ _('Next chapter') }}</span>  <i class="fas fa-arrow-right fa"></i> </a>
+  {%- endif %}
+</div>
 
 <script type="text/javascript">
   $('#relations-prev').tooltip({'placement':'right', 'selector': '', 'delay': { show: 100, hide: 50}});
   $('#relations-next').tooltip({'placement':'left', 'selector': '', 'delay': { show: 100, hide: 50}});
 </script>
 </div>
+
+
+<!-- <div class="petljadoc-resources">
+  <span class="pull-left">&copy; 2019 Petlja (Created using  <a href="https://pypi.org/project/Sphinx/">Swinx</a>, <a href="http://runestoneinteractive.org/">RunestoneComponents</a> and <a href="https://github.com/Petlja/PetljaDoc">PetljaDoc</a>)</span>
+</div> 
+<ul class="pager">
+{%- if prev %}
+<a href="{{ prev.link|e }}" id="prevLectureLink"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
+{%else%}
+<a href="#" class="invisible" id="prevLectureLink"><div id="prevLecture" class="lecture-toggler-arrows"><i class="fas fa-arrow-left fa"></i></div></a>
+{% endif %}
+{%- if next %}
+<a href="#" id="nextLectureLink"><div id="nextLecture" class="lecture-toggler-arrows lecture-toggler-arrows-next"> <i class="fas fa-arrow-right fa"></i></div></a>
+{%- endif %}
+</ul>-->
