--- a/petljadoc/themes/course_theme/globaltoc.html
+++ b/petljadoc/themes/course_theme/globaltoc.html
@@ -1,7 +1,6 @@
 
            <div class="tableOfContent">
-            <h5> {{ _('Table of content:') }} </h5>
-                <div id="courseContentToggle"><i class="far fa-arrow-alt-circle-left courseContentToggle"></i></div>
+            <h5> {{ _('Table of content') }} </h5>
             </div>
            <div>{% for lesson in course.active_lessons %}
                 <div class="courseContentsSection">
