--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -1,21 +1,6 @@
 {% extends "basic_layout.html" %}
 
 {% set script_files = ['_static/runestonebase.js', '_static'+'/skulpt.min.js', '_static'+'/skulpt-stdlib.js'] + script_files + [
-    '_static'+ '/mchoice-i18n.sr-Cyrl.js',
-    '_static'+ '/mchoice-i18n.sr.js',
-    '_static'+ '/mchoice-i18n.sr-Latn.js',
-    '_static'+ '/dragndrop-i18n.sr-Cyrl.js',
-    '_static'+ '/dragndrop-i18n.sr.js',
-    '_static'+ '/dragndrop-i18n.sr-Latn.js',
-    '_static'+ '/fitb-i18n.sr-Cyrl.js',
-    '_static'+ '/fitb-i18n.sr.js',
-    '_static'+ '/fitb-i18n.sr-Latn.js',
-    '_static'+ '/parsons-i18n.sr-Cyrl.js',
-    '_static'+ '/parsons-i18n.sr.js',
-    '_static'+ '/parsons-i18n.sr-Latn.js',
-    '_static'+ '/activecode-i18n.sr-Cyrl.js',
-    '_static'+ '/activecode-i18n.sr.js',
-    '_static'+ '/activecode-i18n.sr-Latn.js',
     '_static'+'/jquery-ui-1.10.3.custom.min.js',
     '_static'+'/jquery-fix.js',
     '_static'+'/bootstrap-4.0.0-dist/js/bootstrap.min.js',
@@ -30,6 +15,7 @@
     '_static'+'/processing-1.4.1.min.js',
     '_static'+'/jquery.hotkey.js',
     '_static'+'/jquery-migrate-1.2.1.min.js',
+    '_static'+'/petlja_ruenstone.js',
   ]
 %}
 
@@ -60,19 +46,19 @@
 
   <div class="container">
 
-    <div class="navbar-header">
+    <div class="navbar-header" style="width: 10%;margin-top: 20px;">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <img src="{{pathto('_static/img/logo.png', 1)}}" style="width:80px; height: 80px;"> 
+     <img src="{{pathto('_static/img/logo.png', 1)}}" style="width: 50%;"> 
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-top: 10px; margin-left: 25px;">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="{{pathto('', 1)}}">{% if theme_navbar_title -%}{{ theme_navbar_title|e }}{%- else -%}{{ project|e }}{%- endif -%}</a></li>
+      <ul class="nav navbar-nav " style="width: 90%;">
+        <li class="active"><a style="text-align: center;" href="{{pathto('', 1)}}">{% if theme_navbar_title -%}{{ theme_navbar_title|e }}{%- else -%}{{ project|e }}{%- endif -%}</a></li>
       </ul>
     </div>
   </div>
@@ -80,34 +66,28 @@
 {% endmacro %}
 
 {%- block extrahead %}
-<meta charset='utf-8'>
-<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-<link rel="shortcut icon" href="{{pathto('_static/favicon.ico', 1)}}" type="image/ico" />
-
-<script type="text/javascript">
-  eBookConfig = {};
-  eBookConfig.host = '{{course_url}}' ? '{{course_url}}' : 'http://127.0.0.1:8000';
-  eBookConfig.app = eBookConfig.host + '/{{appname}}';
-  eBookConfig.ajaxURL = eBookConfig.app + '/ajax/';
-  eBookConfig.course = '{{course_id}}';
-  eBookConfig.logLevel = '{{ loglevel }}';
-  eBookConfig.loginRequired = '{{ login_required }}';
-  eBookConfig.build_info = "{{build_info}}";
-  eBookConfig.isLoggedIn = false;
-  eBookConfig.useRunestoneServices = '{{ use_services }}';
-  eBookConfig.python3 = true;
-  eBookConfig.basecourse = '{{ basecourse }}';
-  eBookConfig.runestone_version = '{{ runestone_version }}';
-  eBookConfig.imagesDir = '{{ pathto("_images/",1) }}';
-  eBookConfig.staticDir = '{{ pathto("_static/",1) }}';
-  if(typeof(Sk) != "undefined")
-      Sk.imgPath = eBookConfig.imagesDir;
-</script>
-
-<div id="fb-root"></div>
-
-
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <script type="text/javascript">
+      eBookConfig = {};
+      eBookConfig.host = '{{course_url}}' ? '{{course_url}}' : 'http://127.0.0.1:8000';
+      eBookConfig.app = eBookConfig.host + '/{{appname}}';
+      eBookConfig.ajaxURL = eBookConfig.app + '/ajax/';
+      eBookConfig.course = '{{course_id}}';
+      eBookConfig.logLevel = '{{ loglevel }}';
+      eBookConfig.loginRequired = '{{ login_required }}';
+      eBookConfig.build_info = "{{build_info}}";
+      eBookConfig.isLoggedIn = false;
+      eBookConfig.useRunestoneServices = false;
+      eBookConfig.python3 = true;
+      eBookConfig.basecourse = '{{ basecourse }}';
+      eBookConfig.runestone_version = '{{ runestone_version }}';
+      eBookConfig.imagesDir = '{{ pathto("_images/",1) }}';
+      eBookConfig.staticDir = '{{ pathto("_static/",1) }}';
+      if (typeof (Sk) != "undefined")
+        Sk.imgPath = eBookConfig.imagesDir;
+    </script>
 {% endblock %}
 
 {# Silence the sidebar's, relbar's #}
@@ -123,7 +103,7 @@
 
 <div class="container col-md-12" id="continue-reading"></div>
 
-<div class="container col-md-8 col-md-offset-2" id="main-content" style="margin-top: 70px;">
+<div class="container col-md-8 col-md-offset-2" id="main-content" style="margin-top: 100px;">
   {% block body %}{% endblock %}
   {% block nextprevious %}
       {% include "subchapter.html" %}
