--- a/petljadoc/runestone_ext/associations/test/associations.html
+++ b/petljadoc/runestone_ext/associations/test/associations.html
@@ -1,53 +1,4 @@
-<link rel="stylesheet" href="1.css">
-<div class="asc">
-    <div id="123" class="asc-group">
-        <div class="asc-clue asc-clue-hidden" data-ord="A1"> A1 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A2"> A2 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A3"> A3 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A4"> A4 </div>
-        <div>
-            <div>
-                <input id="asc-input" class="asc-input"></input>
-                <div class="asc-test-answer">Testiraj</div>
-            </div>
-            <div class="correct-msg">
-                Tacano
-            </div>
-        </div>
-    </div>
-    <div id="123" class="asc-group">
-        <div class="asc-clue asc-clue-hidden" data-ord="A1"> A1 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A2"> A2 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A3"> A3 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A4"> A4 </div>
-        <div>
-            <div>
-                <input id="asc-input" class="asc-input"></input>
-                <div class="asc-test-answer">Testiraj</div>
-            </div>
-            <div class="correct-msg">
-                Tacano
-            </div>
-        </div>
-    </div>
-    <div id="123" class="asc-group">
-        <div class="asc-clue asc-clue-hidden" data-ord="A1"> A1 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A2"> A2 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A3"> A3 </div>
-        <div class="asc-clue asc-clue-hidden" data-ord="A4"> A4 </div>
-        <div>
-            <div>
-                <input id="asc-input" class="asc-input"></input>
-                <div class="asc-test-answer">Testiraj</div>
-            </div>
-            <div class="correct-msg">
-                Tacano
-            </div>
-        </div>
-    </div>
-    <div class="odgovor">
-        <input></input>
-        <div class="asc-final-test-answer">Testiraj</div>
-    </div>
+<link rel="stylesheet" href="../css/associations.css">
+<div id="1" class="asc" data-game='{"clues":[{"group":"A", "answer" :"Test", "clues" : ["test","test2"], "group-answ" : "Odgovor"},{"group":"B", "answer":"Test2", "clues" : ["test3","test4"],"group-answ" : "(O|o)dgovor"}], "answer":42}'>
 </div>
-<script src="1.js"></script>
+<script src="../js/associations.js"></script>
