--- a/petljadoc/runestone_ext/regexcheck/test/1.html
+++ b/petljadoc/runestone_ext/regexcheck/test/1.html
@@ -1,15 +1,23 @@
 <link rel="stylesheet" href="../css/regex-check.css">
 <script src="../js/regex-check.js"></script>
-<bod>
-    <div>
-        <p>Regex:</p>
-        <textarea spellcheck="false" id="regex_input" class="regex-input"></textarea>
-    </div>
-    <div>
-        <p>Tekst:</p>
-        <div class="text-wrapper">
-            <div id="front" class="regex-text"></div>
-            <textarea spellcheck="false" id="text_input" class="hidden-ta"></textarea>
+<style>
+    body{
+        width: 780px;
+        margin:0 auto;
+    }
+</style>
+<body>
+    <div id="1" class="regex-check">
+        <div>
+            <p class="title">Regular expresion</p>
+            <textarea type="text" spellcheck="false" id="regex_input" class="regex-input"></textarea>
+        </div>
+        <div class="test-text">
+            <p class="title">Test string</p>
+            <div class="editor-wrapper">
+                <div id="front" class="regex-text"></div>
+                <textarea spellcheck="false" id="text_input" class="hidden-ta"></textarea>
+            </div>
         </div>
     </div>
-</bod>
+</body>
