--- a/petljadoc/runestone_ext/regexcheck/test/1.html
+++ b/petljadoc/runestone_ext/regexcheck/test/1.html
@@ -12,6 +12,13 @@
             <p class="title">Regular expresion</p>
             <textarea type="text" spellcheck="false" id="regex_input" class="regex-input"></textarea>
         </div>
+        <p class="title flags">Flags<span class="flag-markers">GSI</span></p>
+        <div class="cheat-sheet">
+            g (global match)<br>
+            i (ignore case)<br>
+            m (multiline)<br>
+            s ("dotAll")
+        </div>
         <div class="test-text">
             <p class="title">Test string</p>
             <div class="editor-wrapper">
