--- a/petljadoc/runestone_ext/regexcheck/test/1.html
+++ b/petljadoc/runestone_ext/regexcheck/test/1.html
@@ -2,26 +2,28 @@
 <script src="../js/regex-check.js"></script>
 <style>
     body{
-        width: 780px;
+        max-width: 780px;
         margin:0 auto;
     }
 </style>
 <body>
-    <div id="1" class="regex-check">
+    <div id="1" class="regex-check" data-regex='{"solution" : "a", "text" : "asd asd", "editable" : "True", "flags" : "gsi"}'>
         <div>
             <p class="title">Regular expresion</p>
             <textarea type="text" spellcheck="false" id="regex_input" class="regex-input"></textarea>
         </div>
-        <p class="title flags">Flags<span class="flag-markers">GSI</span></p>
+        <div>
+            <p class="title flags">Flags<span class="flag-markers">GSI</span></p>
+        </div>
         <div class="cheat-sheet">
             g (global match)<br>
             i (ignore case)<br>
             m (multiline)<br>
             s ("dotAll")
         </div>
-        <div class="test-text">
+        <div class="editor-wrapper">
             <p class="title">Test string</p>
-            <div class="editor-wrapper">
+            <div class="test-text">
                 <div id="front" class="regex-text"></div>
                 <textarea spellcheck="false" id="text_input" class="hidden-ta"></textarea>
             </div>
