--- a/petljadoc/runestone_ext/game/1.html
+++ b/petljadoc/runestone_ext/game/1.html
@@ -22,6 +22,7 @@
                 </label>
                 <p>Igra za jednog igraca</p>
             </div>
+            <button data-restart>Restartuj igru</button>
             <div class="game-input">
                 <div class="player-one">
                 <input data-input-id="player-1">
