--- a/petljadoc/runestone_ext/blockly-new/index.html
+++ b/petljadoc/runestone_ext/blockly-new/index.html
@@ -17,9 +17,9 @@
     <script src="blocks_compressed.js"></script>
     <script src="javascript_compressed.js"></script>
     <script src="acorn_interpreter.js"></script>
+    <script src="msg/js/sr.js"></script>
     <script src="msg/js/en.js"></script>
-    <!-- <script src="msg/js/sr.js"></script> -->
-
+    <script type="text/javascript" src="karelBlocks.js"></script>
     <script type="text/javascript" src="karelCorner.js"></script>
     <script type="text/javascript" src="karelRobot.js"></script>
     <script type="text/javascript" src="karelWorld.js"></script>
