--- a/petljadoc/runestone_ext/blockly-new/index.html
+++ b/petljadoc/runestone_ext/blockly-new/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="sr">
 
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
     <script src="javascript_compressed.js"></script>
     <script src="acorn_interpreter.js"></script>
     <script src="msg/js/sr.js"></script>
-    <script src="msg/js/en.js"></script>
+    <!--<script src="msg/js/en.js"></script>-->
     <script type="text/javascript" src="karelBlocks.js"></script>
     <script type="text/javascript" src="karelCorner.js"></script>
     <script type="text/javascript" src="karelRobot.js"></script>
